--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <button class="btn-proximo" data-proximo="2">Ver se a história é real</button>
         </div>
         <div class="passo" id="passo-1">
-            <entrei para dentro da casa com a minha equipe, vimos que ela era muito grande e antiga</p>
+            <p>entrei para dentro da casa com a minha equipe, vimos que ela era muito grande e antiga</p>
             <button class="btn-proximo" data-proximo="3">a casa costuma ter uns eventos paranormais ás 03:00 da manhã</button>
             <button class="btn-proximo" data-proximo="4ver qual é da origem da casa</button>
         </div>
         <div class="passo" id="passo-2">
-            <p>Em Pernambuco, você visita a casa para ver como ela é e descobre muitas coisas
+            <p>Em uma tarde, você visita a casa para ver como ela é e descobre muitas coisas
             <button class="btn-proximo" data-proximo="5">Investigar a casa antiga</button>
             <button class="btn-proximo" data-proximo="6">Explorar as areas próximas</button>
         </div>
@@ -58,4 +58,6 @@
             <button class="btn-proximo" data-proximo="7">Seguimos embora</button>
         </div>
 
-        
+    </main>
+</body>
+</html>        
